--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -30,6 +30,12 @@
                         Créer un menu
                     </a>
                 </li>
+                <li>
+                    <a class="nav-link btn btn-light text-primary font-weight-bold p-3 m-3" href="{{ path('shopping_list_index') }}">
+                        <i class="fas fa-tasks mr-2"></i>
+                        Liste de courses
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
