--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -23,9 +23,15 @@
             <p>Un menu, une liste de courses.</p>
         </div>
         <div class="d-flex align-items-center justify-content-around mb-5">
-            <a class="btn btn-primary p-5" href="{{ path('menu_new') }}">
+            <a class="btn btn-primary p-3" href="{{ path('menu_new') }}">
                 <i class="fas fa-scroll mr-2"></i>
                 Créer un menu
+            </a>
+        </div>
+        <div class="d-flex align-items-center justify-content-around mb-5">
+            <a class="btn btn-primary p-3" href="{{ path('shopping_list_index') }}">
+                <i class="fas fa-tasks mr-2"></i>
+                LA Liste de courses
             </a>
         </div>
     </div>
