--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -6,8 +6,7 @@
     <a class="p-3" href="{{ path('menu_index') }}">Retour à la liste des menus</a>
     <h4 class="text-center my-4">Menu du {{ menu.startedAt|date("d/m/Y") }} au {{ menu.finishedAt|date("d/m/Y") }}</h4>
     <div class="text-center my-3">
-        <a class="btn btn-primary" href="">Ajouter à la liste de courses</a>
-{#        <a class="btn btn-primary" href="{{ path('shoppingList', {'menu_id': menu.id}) }}">Générer la liste de courses</a>#}
+        <a class="btn btn-primary" href="{{ path('shopping_list_add_items_from_menu', { 'menu_id': menu.id }) }}">Ajouter à la liste de courses</a>
     </div>
 
     <div class="d-flex flex-wrap justify-content-center">
