SHOPPING LIST end improvements

--- a/templates/shopping_list/edit.html.twig
+++ b/templates/shopping_list/edit.html.twig
@@ -18,6 +18,7 @@
                     {{ form_row(listItem.checked) }}
                     {{ form_row(listItem.content) }}
                     {{ form_row(listItem.quantity) }}
+                    {{ form_row(listItem.shopPlace) }}
                 </li>
             {% endfor %}
         </ul>
