--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -24,7 +24,7 @@
             </div>
             <div class="col-12 col-md-5 recipe-description-box alert alert-secondary my-3 mx-2">
                 <h5 class="text-center mb-3"><i class="fas fa-list-ol mr-2"></i> Déroulé de la recette</h5>
-                <p>{{ recipe.description }}</p>
+                <p class="white-space-pre-wrap">{{ recipe.description }}</p>
             </div>
         </div>
     </div>
